--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
 						<!--STORY 4-->
 
 						<p><a href="https://www.huffingtonpost.com/entry/vintage-pet-rescue_us_5c141e0de4b049efa7524659" tags="" style="font-size: 12px; font-family: helvetica; display:inline" tags="">Rhode Island Nonprofit Rescues Elderly Dogs</a> <span style="line-height: 10px; font-size: 12px; font-weight: normal; color: #000000; font-family: helvetica"> After being moved by the state of elderly dogs in pet shelters, Kristen Peralta decided to start Vintage Pet Rescue, a nonprofit in Rhode Island that provides care for these older pups. Senior dogs have significantly lower adoption rates compared to younger dogs. </span></p>
+						<!--STORY 5-->
+
+						<p><a href="https://www.goodnewsnetwork.org/12-year-old-boy-gives-away-lunches-to-homeless-and-hell-soon-have-his-own-truck/" tags="" style="font-size: 12px; font-family: helvetica; display:inline" tags="">12 Year old Massachusetts boy feeds the homeless.</a> <span style="line-height: 10px; font-size: 12px; font-weight: normal; color: #000000; font-family: helvetica"> Liam Hannon is spreading kindness in his town of Cambridge, Massachuesetts. He has handed out over 2,000 meals to the homeless in the last year with a handwritten message. </span></p>
 						</td>
 					</tr>
         </table>
